[package]
name = "fart-proxy"
version = "0.1.0"
authors = ["Pavlo Hlushchenko <pavlo.hlushchenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
ctrlc = "3.1.4"
lazy_static = "1.4.0"
regex = "1.3.6"
